@@ -1,3 +1,10 @@
+2006-03-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-do-copy-or-rename-file-out-of-band)
+	(tramp-handle-write-region, tramp-touch)
+	(tramp-call-local-coding-command): Local `call-process' and
+	`start-process' must be applied with a local `default-directory'.
+
 2006-03-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-pre-connection): The buffer must be erased.
